--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "express": "^4.18.2",
+    "js-cookie": "^3.0.5",
     "mongodb": "^5.6.0",
     "mongoose": "^7.2.3",
     "navigation": "^6.2.0",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
-    "@types/express": "^4.17.17"
+    "@types/express": "^4.17.17",
+    "@types/js-cookie": "^3.0.3"
   }
 }
